# TimeFuzz

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  buildDebug.bat  buildKali.sh  buildLinux.sh  configure.bat  requirements.txt  stuff to save.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
CrashHandler/: ChrashHandlerINCL.h  CrashHandler.cpp  PCH.cpp  PCH.h
CrashHandler/FormatExamples/: Inputs.py  TestMario_NoGraphics.py  grammar3_compare.scala  grammar_compare.scala  grammarfull.scala
CrashHandler/Introspection/: Introspection.cpp
CrashHandler/Modules/: ModuleHandler.cpp  ModuleHandler.h
CrashHandler/PDB/: PdbHandler.cpp  PdbHandler.h
DeathHandler/: LICENSE  README.md  death_handler.cc
FormatExamples/: TestMario.py  grammar1.scala  grammar2.scala  grammar3.scala
cmake/: sourcelist.cmake
include/: Allocatable.h  Allocators.h  BufferOperations.h  BufferOperations.h~RF114c3e3f.TMP  CrashHandler.h  Data.h  DeltaDebugging.h  DerivationTree.h  EarleyParser.h  Evaluation.h  ExclusionTree.h  ExecutionHandler.h  ExitCodes.h  FilterFunctions.h  Form.h  Form.h~RF51b971a.TMP  Function.h  Generation.h  Generator.h  Grammar.h  Handles.h  IPCommManager.h  Input.h  LZMAStreamBuf.h  Logging.h  LuaEngine.h  MemoryStream.h  Oracle.h  OrderedSet.h  Processes.h  PtrHolder.h  Record.h  Session.h  SessionData.h  SessionFunctions.h  Settings.h  StableSet.h  TaskController.h  Test.h  ThreadSafe.h  (+5 more)
include/CrashHandler/: CrashHandler.h  Readme.md
include/CrashHandler/Introspection/: Introspection.h
include/CrashHandler/Modules/: ModuleHandler.h
include/Interfaces/: IInput.h
include/shader/: learnopengl_shader_s.h
src/: Allocators.cpp  ArrayBuffer.cpp  BufferOperations.cpp  CMakeLists.txt  CrashHandler.cpp  Data.cpp  DeltaDebugging.cpp  DerivationTree.cpp  Evaluation.cpp  ExclusionTree.cpp  ExecutionHandler.cpp  Form.cpp  Function.cpp  Generation.cpp  Generator.cpp  Grammar.cpp  IPCommManager.cpp  Input.cpp  LZMAStreambuf.cpp  Logging.cpp  LuaEngine.cpp  MemoryStream.cpp  Oracle.cpp  Processes.cpp  Record.cpp  Session.cpp  Session.cpp~RF25b96ad.TMP  SessionData.cpp  SessionFunctions.cpp  SessionFunctions.cpp~RF44f7327.TMP  SessionFunctions.cpp~RF44f9797.TMP  SessionFunctions.cpp~RFe4df638.TMP  Settings.cpp  TaskController.cpp  Test.cpp  Test.cpp~RF24af2c.TMP  ThreadSafe.cpp  UIClasses.cpp  Utility.cpp  ansi_escapes.cpp  (+1 more)
src/CrashHandler/: CrashHandler.cpp  PCH.cpp
src/CrashHandler/Introspection/: Introspection.cpp
src/CrashHandler/Modules/: ModuleHandler.cpp
src/CrashHandler/PDB/: PdbHandler.cpp
static/shader/: 4.1.texture.fs  4.1.texture.vs
tests/: Allocator_Test.cpp  CMakeLists.txt  Delete_Test.cpp  ExecutionHandler_Test.cpp  Grammar_Test.cpp  Grammar_test.cpp  Inputs_Test.cpp  Inputs_test.cpp  Mario_Test.cpp  Misc_Test.cpp  SaveLoad_Test.cpp  TaskController_Test.cpp  TaskController_test.cpp  Utility_Test.cpp  Utility_test.cpp
tests/PUTs/: Test_PUT_General.cpp  Test_PUT_IO.cpp
